--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CafeAppBackendDB": "Server=localhost;Database=CafeAppBackendDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
